# odoo-nginx-setup

./: .gitignore  README.md  pyproject.toml
odoo_nginx_setup/: cli.py  detect.py  firewall.py  nginx.py  systemd.py
odoo_nginx_setup/dns/: cloudflare.py  hetzner.py
